Closed
Bug 170430
Opened 23 years ago
Closed 23 years ago
trunk topcrash [@ nsMsgIdentity::ClearAllValues]
Categories
(SeaMonkey :: MailNews: Message Display, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
People
(Reporter: jcarpenter0524, Assigned: sspitzer)
Details
(Keywords: crash, topcrash)
Crash Data
Attachments
(1 file)
|
926 bytes,
patch
|
blizzard
:
review+
bzbarsky
:
superreview+
|
Details | Diff | Splinter Review |
This stack signature is a topcrasher for trunk
Crash data range: 2002-09-20 to 2002-09-21
Build ID range: 2002091908 to 2002092108
STACK TRACE:
nsMsgIdentity::ClearAllValues
[c:/builds/seamonkey/mozilla/mailnews/base/util/nsMsgIdentity.cpp line 415]
XPTC_InvokeByIndex
[c:/builds/seamonkey/mozilla/xpcom/reflect/xptcall/src/md/win32/xptcinvoke.cpp
line 106]
XPCWrappedNative::CallMethod
[c:/builds/seamonkey/mozilla/js/src/xpconnect/src/xpcwrappednative.cpp line 1996]
XPC_WN_GetterSetter
[c:/builds/seamonkey/mozilla/js/src/xpconnect/src/xpcwrappednativejsops.cpp
line 1299]
js_Invoke [c:/builds/seamonkey/mozilla/js/src/jsinterp.c line 841]
js_InternalInvoke [c:/builds/seamonkey/mozilla/js/src/jsinterp.c line 932]
js_GetProperty [c:/builds/seamonkey/mozilla/js/src/jsobj.c line 2549]
js_Interpret [c:/builds/seamonkey/mozilla/js/src/jsinterp.c line 2640]
js_Invoke [c:/builds/seamonkey/mozilla/js/src/jsinterp.c line 857]
js_InternalInvoke [c:/builds/seamonkey/mozilla/js/src/jsinterp.c line 932]
JS_CallFunctionValue [c:/builds/seamonkey/mozilla/js/src/jsapi.c line 3433]
nsJSContext::CallEventHandler
[c:/builds/seamonkey/mozilla/dom/src/base/nsJSEnvironment.cpp line 1044]
nsJSEventListener::HandleEvent
[c:/builds/seamonkey/mozilla/dom/src/events/nsJSEventListener.cpp line 184]
nsEventListenerManager::HandleEventSubType
[c:/builds/seamonkey/mozilla/content/events/src/nsEventListenerManager.cpp line
1183]
nsEventListenerManager::HandleEvent
[c:/builds/seamonkey/mozilla/content/events/src/nsEventListenerManager.cpp line
1854]
GlobalWindowImpl::HandleDOMEvent
[c:/builds/seamonkey/mozilla/dom/src/base/nsGlobalWindow.cpp line 766]
DocumentViewerImpl::LoadComplete
[c:/builds/seamonkey/mozilla/content/base/src/nsDocumentViewer.cpp line 970]
nsDocShell::EndPageLoad
[c:/builds/seamonkey/mozilla/docshell/base/nsDocShell.cpp line 4145]
nsWebShell::EndPageLoad
[c:/builds/seamonkey/mozilla/docshell/base/nsWebShell.cpp line 818]
nsDocShell::OnStateChange
[c:/builds/seamonkey/mozilla/docshell/base/nsDocShell.cpp line 4079]
nsDocLoaderImpl::FireOnStateChange
[c:/builds/seamonkey/mozilla/uriloader/base/nsDocLoader.cpp line 1218]
nsDocLoaderImpl::doStopDocumentLoad
[c:/builds/seamonkey/mozilla/uriloader/base/nsDocLoader.cpp line 870]
nsDocLoaderImpl::DocLoaderIsEmpty
[c:/builds/seamonkey/mozilla/uriloader/base/nsDocLoader.cpp line 768]
nsDocLoaderImpl::OnStopRequest
[c:/builds/seamonkey/mozilla/uriloader/base/nsDocLoader.cpp line 699]
nsLoadGroup::RemoveRequest
[c:/builds/seamonkey/mozilla/netwerk/base/src/nsLoadGroup.cpp line 703]
imgRequestProxy::OnStopRequest
[c:/builds/seamonkey/mozilla/modules/libpr0n/src/imgRequestProxy.cpp line 398]
imgRequest::OnStopRequest
[c:/builds/seamonkey/mozilla/modules/libpr0n/src/imgRequest.cpp line 683]
ProxyListener::OnStopRequest
[c:/builds/seamonkey/mozilla/modules/libpr0n/src/imgLoader.cpp line 845]
nsJARChannel::OnStopRequest
[c:/builds/seamonkey/mozilla/netwerk/protocol/jar/src/nsJARChannel.cpp line 609]
nsOnStopRequestEvent::HandleEvent
[c:/builds/seamonkey/mozilla/netwerk/base/src/nsRequestObserverProxy.cpp line 213]
PL_HandleEvent [c:/builds/seamonkey/mozilla/xpcom/threads/plevent.c line 647]
PL_ProcessPendingEvents [c:/builds/seamonkey/mozilla/xpcom/threads/plevent.c
line 580]
_md_EventReceiverProc [c:/builds/seamonkey/mozilla/xpcom/threads/plevent.c
line 1330]
USER32.dll + 0x3c076 (0x77d7c076)
USER32.dll + 0x3c076 (0x77d7c076)
_except_handler3()
kernel32.dll + 0x3bb86 (0x77e9bb86)
Source File : c:/builds/seamonkey/mozilla/mailnews/base/util/nsMsgIdentity.cpp
line : 415
URLs\COMMENTS:
(11331164) URL: http://www.warp2search.net/sniper/Sniper.html
(11330962) URL: http://www.warp2search.net/sniper/Sniper.html
(11324815) Comments: ack just staring up = abend email. ouch.
(11274823) URL: http://freetrade.fr.st/
(11257857) URL: http://www.warp2search.net/sniper/Sniper.html
I could be way wrong, but it looks like this is related to the recent spam UI
landing. Here's where it's crashing on line 415:
http://lxr.mozilla.org/mozilla/source/mailnews/base/util/nsMsgIdentity.cpp#407
| Reporter | ||
Updated•23 years ago
|
Component: Account Manager → Mail Window Front End
Updated•23 years ago
|
Severity: normal → critical
Comment 3•23 years ago
|
||
Timeless asked me to make this patch. I haven't tested it other than to make
sure it compiles.
Comment 4•23 years ago
|
||
Comment on attachment 101013 [details] [diff] [review]
Patch by timeless
sr=bzbarsky
Attachment #101013 -
Flags: superreview+
Comment 5•23 years ago
|
||
Comment on attachment 101013 [details] [diff] [review]
Patch by timeless
r=blizzard
Looks reasonable.
Attachment #101013 -
Flags: review+
fixed. note that 72hrs had long since expired.
Status: NEW → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
| Assignee | ||
Comment 7•23 years ago
|
||
thanks for the fix.
I'm not sure what caused this.
As for nsMsgIdentity.cpp, I just removed this line:
NS_IMPL_FOLDERPREF_STR (JunkMailFolder, "spam_folder");
It might still be related to my spam UI work, but I'm not seeing it yet.
| Assignee | ||
Comment 8•23 years ago
|
||
also, what is "note that 72hrs had long since expired" about?
Comment 9•23 years ago
|
||
It's the new zt4newcrash keyword which has the following description:
Zero Tolerance New Crash due to regression introduced in the last 72 hours of
check-ins. See the policy.
Comment 10•23 years ago
|
||
QA needs a test case to test this.
Comment 11•23 years ago
|
||
no qa doesn't. just check talkback.
Updated•21 years ago
|
Product: Browser → Seamonkey
Updated•14 years ago
|
Crash Signature: [@ nsMsgIdentity::ClearAllValues]
You need to log in
before you can comment on or make changes to this bug.
Description
•