Bug 170430 trunk topcrash [@ nsMsgIdentity::ClearAllValues] r=blizzard, sr=bzbarsky